put the paper on gdoc

--- a/paper/hcomp-2014/confer-hcomp-14.tex
+++ b/paper/hcomp-2014/confer-hcomp-14.tex
@@ -315,7 +315,7 @@ Multiple \textbackslash thanks commands can be given. Each will result in a sepa
 Please do not include \textbackslash pubnote commands in your document.
 
 \subsection{Abstract}
-The abstract must be placed at the beginning of the first column, indented ten points from the left and right margins. The title “Abstract” should appear in ten-point bold type, centered above the body of the abstract. The abstract should be set in nine-point type with ten-point leading. This concise, one-paragraph summary should describe the general thesis and conclusion of your paper. A reader should be able to learn the purpose of the paper and the reason for its importance from the abstract. The abstract should be no more than two hundred words in length. (Authors who are submitting short one- or two-page extended extracts should provide a short abstract of only a sentence or so.) \textbf{Do not include references in your abstract!}
+The abstract must be placed at the beginning of the first column, indented ten points from the left and right margins. The title ``Abstract'' should appear in ten-point bold type, centered above the body of the abstract. The abstract should be set in nine-point type with ten-point leading. This concise, one-paragraph summary should describe the general thesis and conclusion of your paper. A reader should be able to learn the purpose of the paper and the reason for its importance from the abstract. The abstract should be no more than two hundred words in length. (Authors who are submitting short one- or two-page extended extracts should provide a short abstract of only a sentence or so.) \textbf{Do not include references in your abstract!}
 
 \subsection{Page Numbers}
 
@@ -500,3 +500,5 @@ The preparation of the \LaTeX{} and Bib\TeX{} files that implement these instruc
 \noindent Thank you for reading these instructions carefully. We look forward to receiving your electronic files!
 
 \end{document}
+
+
