--- a/paper/hcomp-2014/references.bib
+++ b/paper/hcomp-2014/references.bib
@@ -15,3 +15,23 @@
  address = {New York, NY, USA},
  keywords = {cobi, community, communitysourcing, conference scheduling, constraint solving, crowdsourcing, mixed-initiative},
 } 
+
+@inproceedings{CommunityClusteringHCOMP13,
+  title = {Community Clustering: Leveraging an Academic Crowd to Form Coherent Conference Sessions.},
+  author = {Andr{\'e}, Paul and Zhang, Haoqi and Kim, Juho and Chilton, Lydia B. and Dow, Steven P. and Miller, Robert C.}, 
+  booktitle = {First AAAI Conference on Human Computation and Crowdsourcing},
+  editor = {Hartman, Bjšrn and Horvitz, Eric},
+  isbn = {978-1-57735-607-3},
+  publisher = {AAAI},  
+  year = {2013}
+}
+
+@inproceedings{FrenzyCHI2014,
+  title={Frenzy: Collaborative Data Organization for Creating Conference Sessions },
+  author={Chilton, Lydia B. and Kim, Juho and Andr{\'e}, Paul and Cordeiro, Felicia and Landay, James A. and Weld, Daniel S. and Dow, Steven P. and Miller, Robert C. and Zhang, Haoqi },
+  booktitle = {Proceedings of the SIGCHI Conference on Human Factors in Computing Systems},
+  series = {CHI '14},
+  year = {2014},
+  publisher = {ACM},
+  address = {New York, NY, USA},
+}
