--- a/paper/hcomp-2014/confer-hcomp-14.tex
+++ b/paper/hcomp-2014/confer-hcomp-14.tex
@@ -56,7 +56,7 @@ Constructing a \emph{good conference schedule} for a large multi-track conferenc
 \emph{Cobi} introduced an alternative approach to conference scheduling by engaging the community to play an active role in the planning process. The current Cobi pipeline consists of \emph{committee-sourcing} and \emph{author-sourcing} to plan a conference schedule. We further explore the design space of \emph{community-sourcing} by introducing \emph{attendee-sourcing} -- a process that collects input from conference attendees and encodes them as preferences and constraints for creating sessions and schedule.  For CHI 2014, a large multi-track conference in human-computer interaction with more than 3,000 attendees and 1,000 authors, we collected attendees' preferences by making available all the accepted papers at the conference on a paper recommendation tool we built called \emph{Confer}, for a period of 45 days before announcing the conference program (sessions and schedule). We compare the preferences marked on Confer with the preferences collected from Cobi's author-sourcing approach. We show that attendee-sourcing can provide insights beyond what can be discovered by author-sourcing. For CHI 2014, the results show value in the method and attendees' participation. It produces data that provides more alternatives in scheduling and complements data collected from other methods for creating coherent sessions and reducing conflicts.
 \end{quote}
 \end{abstract}
-\noindent
+
 \section{Introduction}
 For large conferences with hundreds of papers and multiple parallel sessions, constructing a \emph{good} schedule is a difficult task. The difficulty of the task lies in how to create thematically coherent sessions and schedule them in such a way that it accommodates preferences and constraints of conference organizers, authors, and attendees. For logistic and pragmatic reasons, large-scale event planning typically becomes a responsibility of a few dedicated organizers ~\cite{EventPlanning}. Organizers have to often struggle to gather all the information necessary for an optimal planning. Even with sophisticated planning tools, organizers find it difficult to accommodate unforeseen issues and unvoiced opinions ~\cite{CoDesign}.
 
@@ -77,7 +77,7 @@ Despite the many benefits, we identify the following limitations in Cobi's autho
 \caption{\emph{For CHI 2014, all the accepted papers were released on Confer 4 months before the conference (45 days before releasing the schedule).}}
 \label{all-accepted-papers}
 \end{figure}
-\noindent
+
 In this paper, we explore the design space of \emph{community-sourcing} and propose \emph{attendee-sourcing} -- a process that collects input from conference attendees and encodes them as preferences and constraints for creating sessions and schedule. We give attendees an interface that allows them to discover and explore the entire set of papers without restriction. Attendees can mark as many papers as they like in their preference list. For CHI 2014, we collected attendees' preferences by putting all the papers accepted at CHI 2014 into a paper-recommendation tool we built called Confer ~\cite{Confer} (Figure~\ref{all-accepted-papers}), for a period of 45 days before releasing the conference program (sessions and schedule). We find that attendees are often interested in exploring award/honorable mention papers, papers from a particular institution/organization, papers by a particular author, papers related to a particular topic, etc. In the process of exploration, they find interesting papers which they add to their preference list. We believe that with attendee-sourcing we can collect rich preference data as by-products of \emph{natural} exploration by attendees. The Confer interface and underlying recommendation engine are designed to support the exploratory behavior and keep the attendees engaged by showing them papers they are most likely to find interesting.
 
 We compare the data collected from \emph{attendee-sourcing} with the data collected from Cobi's \emph{author-sourcing}. Our analysis suggests that attendee-sourcing can provide affinities beyond what can be discovered by author-sourcing. We find that both approaches provide unique insights difficult to capture by the other. We conclude that the two approaches complement each other and provide alternatives for creating coherent sessions and reducing conflicts.
@@ -89,7 +89,7 @@ Our work explores the incentives, methods, and interfaces for collecting and inc
 
 The most recent work in this area is Cobi~\cite{CobiUIST2013} which initially involves committee members to group papers and then invites the authors of the accepted papers to identify papers that would fit well in a session with their own, and which papers would they like to see. Cobi makes a design choice of giving the authors a list of 20 similar papers to choose from. While simplifying the task for authors, they can't indicate any paper outside the presented list (20 papers) as ``similar to their paper'', or ``would like to see''. We argue that it is possible to miss many paper-similarities because of such design.
 
-A number of recent systems explore the use of crowds for making and executing plans ~\cite{CollaborativePlanning, Turkomatic, HCT, EmailVallet}. Prior work on community-sourcing has shown that community-sourcing can successfully elicit high-quality expert work from specific communities. ~\cite{CommunitySourcing} show that students can grade exams with 2\% higher accuracy (at the same price) or at 33\% lower cost (at equivalent accuracy) than traditional single-expert grading. ~\cite{CrowdDiversity} explore how expert input can be combined with input from members of the general population. This provides a motivation for attendee-sourcing. We consider attendees as general population, and the data collected from attendee-sourcing can be combined with expert inputs from conference organizers for session creation and schedule planning.
+A number of recent systems explore the use of crowds for making and executing plans ~\cite{CollaborativePlanning}, ~\cite{Turkomatic}, ~\cite{HCT}, and ~\cite{EmailVallet}. Prior work on community-sourcing has shown that community-sourcing can successfully elicit high-quality expert work from specific communities. ~\cite{CommunitySourcing} show that students can grade exams with 2\% higher accuracy (at the same price) or at 33\% lower cost (at equivalent accuracy) than traditional single-expert grading. ~\cite{CrowdDiversity} explore how expert input can be combined with input from members of the general population. This provides a motivation for attendee-sourcing. We consider attendees as general population, and the data collected from attendee-sourcing can be combined with expert inputs from conference organizers for session creation and schedule planning.
 
 Another thread of research explored automatically generating an optimal schedule. In the context of conference scheduling, ~\cite{AutomaticScheduling} introduced formulations for maximizing the number of talks of interest attendees can attend. However, ~\cite{CobiUIST2013} identified that while automated scheduling is appropriate when the parameters and constraints of the optimization problem are well-specified, interviews with past CHI organizers show that they attempt to tackle soft constraints and other tacit considerations. We discuss how attendee-sourcing data could be useful for automatically generating  a draft schedule, which the organizers can refine with their domain expertise and subjective considerations.
 
@@ -172,7 +172,6 @@ Attendees also have an inherent motivation that they want a schedule which takes
 \caption{\emph{CHI announcement on Twitter: ``attendees' preference would be used to create optimal sessions''}}
 \label{chi-announcement-1}
 \end{figure}
-\noindent
 
 We saw a good response from attendees (Figure~\ref{attendee-response}). For CHI 2014, attendee-sourcing attracted 347 attendees - they marked 7228 preferences in total \emph{(mean: 20.83, median: 14, std-dev: 21.47, min: 1, max: 156)}. It covered 581 papers (98.98\% of all the accepted papers). On an average, each paper was in the preference list of 12.44 attendees \emph{(mean: 12.44, median: 10, std-dev: 7.98, min: 1, max: 56)}.
 
@@ -195,7 +194,7 @@ We present the following hypotheses for the potential use of \emph{attendee-sour
 \item \textbf{H2:} Attendee-sourcing provides more alternatives in scheduling and can complement author-sourcing for creating coherent sessions and reducing conflicts.
 \end{enumerate}
 \end{enumerate}
-\noindent
+
 In the next section, we analyze the data collected from both methods.
 \section{Data Analysis}
 In this section we present a comparative analysis for \emph{attendee-sourcing} and \emph{author-sourcing} data collected for CHI 2014. 
@@ -219,6 +218,7 @@ We compare attendee-sourcing and author-sourcing based on affinity score and dis
 \item There are 402 pairs, for which the difference between the affinity scores reported by attendee-sourcing and author-sourcing is $>10$. Moreover, there are 150 pairs for which author-sourcing reports a \emph{zero} affinity and attendee-sourcing reports a strong ($>10$) affinity. In the following paragraphs, we present our reasoning for this difference.
 
 \end{enumerate}
+
 In author-sourcing, authors select their preferences from a set of pre-computed potentially related papers, so the similarities computed from author-sourcing is just a validation and refinement of the pre-computed similarities. Author-sourcing can't discover a new similarity by itself. On the other hand, attendee-sourcing preferences are by-products of a natural navigation and thus attendee-sourcing can discover new similarities.
 
 It is fair to assume that if enough people mark a pair of papers together in their preference list, there is a high likelihood that the pair is related. As we can see, there exists a large number of pairs for which the affinity data differs, especially the 150 pairs for which author-sourcing fails to capture any affinity at all. We take one example pair to understand this -- let's consider the following two papers:
@@ -228,10 +228,11 @@ It is fair to assume that if enough people mark a pair of papers together in the
 
 \item \emph{Vulture: A Mid-Air Word-Gesture Keyboard}: This paper is about a word-gesture keyboard that lets users draw the shape of a word in mid-air. It extends touch based word-gesture algorithms to work in mid-air. It projects users' movement onto the display, and uses pinch as a word delimiter. \textbf{Keywords:} word-gesture keyboard, shape writing, text entry, mid-air interaction, in-air interaction, freehand interaction
 \end{enumerate}
-\noindent
+
 Committee-sourcing captures mostly the salient signals (information based on keywords, title, abstract, etc.) of the papers to form initial groups. These signals may not be always enough to conclude whether two papers are related. For the above two papers, it's difficult to discover that they are closely related without having a deeper understanding of the algorithms they describe.  Also, these two papers have low TF-IDF similarity based on textual information. Since author-sourcing takes the similarity input from the previous stage (committee-sourcing + TF-IDF), it will miss these similarities. In general, the main limitation of these methods is that they can't capture all the dimensions of similarity between papers. If a paper spans multiple sub-fields or domains, it might miss some of those. Attendees, on the other hand, can capture this collectively, because attendees bookmark papers based on their own interest and expertise. When we combine diverse data points from individuals, such multi-faceted nature of papers can be captured. In summary, \emph{author-sourcing focuses on validating similarity, while attendee-sourcing can discover new similarity}.
 
 It is important to note that these similarities are important from the perspective of creating coherent sessions and minimizing conflicts in the schedule.
+\end{enumerate}
 
 Now we show how attendee-sourcing data can be used for creating coherent sessions and reducing conflicts.  In particular, attendee-sourcing can be used to:
 \begin{enumerate}
@@ -240,7 +241,6 @@ Now we show how attendee-sourcing data can be used for creating coherent session
 \item \emph{Reduce Conflicts.} This is straight-forward -- don't schedule two papers in different sessions at the same time if many attendees want to see both of them. 
 
 \item \emph{Measure Paper Popularity.} Determining paper popularity in advance is useful for making strategic decisions on the organizers' side. For example, when assigning rooms, organizers can put popular papers in bigger rooms, and less popular papers in smaller rooms. More accurate popularity estimates can avoid situations like Figure~\ref{crowded-room}, which shows a session from CHI 2013 when a paper a lot of attendees wanted to see was assigned a smaller room. An alternative strategy for scheduling would be as follows: assign a paper very few people want to see in a session with more popular papers, rather than clustering all the less popular papers in the same session. This can help conference organizers maintain popularity balance in the schedule.
-\\
 
 \begin{figure}[!h]
 \centering
@@ -248,7 +248,6 @@ Now we show how attendee-sourcing data can be used for creating coherent session
 \caption{\emph{CHI 2013: A popular paper scheduled in a small room (CHI 2013 had only author-sourcing)}}
 \label{crowded-room}
 \end{figure}
-\end{enumerate}
 \end{enumerate}
 
 \section{Discussion}
@@ -285,4 +284,5 @@ We believe the methods and insights presented in this paper generalize not just 
 \bibliography{references.bib}
 \bibliographystyle{aaai}
 \end{document}
-[a]add more connection
+
+
